--- a/kharshakreasturent.html
+++ b/kharshakreasturent.html
@@ -7,7 +7,7 @@
     </head>
     <body>       
          
-             <h1><Center>Karshak Reastuarant</Center></h1>
+             <h1><Center>&#129505;Karshak Reastuarant&#129505;</Center></h1>
              <p><strong><marquee behavior="alternate" direction="right">50% off on Weekdays</marquee></strong></p>
                <h2>MENU</h2>
                 <hr>
@@ -33,7 +33,7 @@
                     <li>Butter Scotch - 190/-</li>
                 </ol>
                 <hr>
-                <h1><center>THANK YOU</center></h1>
+                <h1><center>&#129505;THANK YOU&#129505;</center></h1>
 
     </body>
 </html>
